errors, going to try rolling back

--- a/src/App.css
+++ b/src/App.css
@@ -235,7 +235,7 @@ article {
     color: rgba(255, 255, 255, 1);
     box-shadow: 0 5px 15px rgba(124, 126, 128, 0.4);
   }
-
+/* 
   @keyframes inAnimation {
     0% {
       opacity: 0;
@@ -255,7 +255,7 @@ article {
       opacity: 0;
       visibility: hidden;
     }
-  }
+  } */
   
   .photo {
     background-color: white;
@@ -280,15 +280,7 @@ article {
     width:145px; */
     transform: scale(2,2)
   }
-  .emptyBox {
-    flex-direction: row;
-    /* flex-wrap: wrap; */
-    flex-grow: 1; 
-    width: 100px;
-    /* display: inline-block; 
-    padding: 0px;
-    margin: 0px;  */
-  }
+  
 
   .modalBtn {
     text-align: right;
