--- a/src/App.css
+++ b/src/App.css
@@ -23,8 +23,8 @@ button {
 .subtract-item {
   display:flex;
   justify-content: space-between;
-  margin-right: 5;
-  width: 97%;
+  /* margin-right: 5; */
+  width: 96%;
 }
 
 .side-bar-add-button {
@@ -42,7 +42,8 @@ input:-webkit-autofill {
 }
 
 .button-flex {
-  width: 20%;
+    margin: 0;  
+    width: 16%;
     display:flex;
     justify-content: space-between;  
 }
@@ -70,7 +71,7 @@ input:-webkit-autofill {
   position: absolute;
   }
   .scrollable {
-    
+    display: inline-block;
     height: 700px;
     overflow-y: scroll;
   }
